# ai-plugins

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CLAUDE.ndf.md  KIRO.md  README.md  SAMPLE.md  claude
.claude/: settings.json
.claude-plugin/: marketplace.json
.kiro/agents/: default.json
.kiro/prompts/: clean.md  fix.md  merged.md  pr-tests.md  pr.md  review.md
.kiro/skills/: clean  cleanup  corder-code-templates  corder-test-generation  data-analyst-export  data-analyst-sql-optimization  deepwiki-transfer  docker-container-access  fix  git-gh-operations  google-auth  knowledge-reorg  markdown-writing  merged  ndf-policies  pr  pr-tests  python-execution  qa-security-scan  researcher-report-templates  review  scanner-pdf-analysis  skill-development
.serena/: .gitignore  project.yml  serena_config.yml
.serena/memories/: development-history-20251115.md  development-history-20260118.md  memory-strategy.md  plugin-ndf.md  plugin-slack-notification.md  project-overview.md
devtools/: .env.example  Dockerfile  build.sh  compose.yml  deploy.sh  down.sh  entrypoint.sh  env.sh  login.sh
docs/: claude-code-skills-official-reference.md  claude-code-skills-survey.md  id_rsa.pub  ndf-plugin-reference.md  official-skills-installation.md  plugin-development-guide.md  project-overview.md
docs/development-history/: 01-2025-11-15.md  02-2026-01-18.md
docs/external-reviews/: pr-57-codex-business-review.md  pr-57-gemini-technical-review.md
issues/: PLAN09.md  PLAN14.md  PLAN15.md  PLAN17.md  PLAN18.md  i001.md  i01.md  i04.md  i05.md  i07.md  i08.md  i09.md  i10.md  i11.md  i12.md  i13.md  i14.md  i15.md  memory_replaning.md  ndf-claude-ndf-md-abolition.md  report05.md  report08.md  template09.md  プレゼン構成案.md
plugins/ndf/skills/deepwiki-transfer/scripts/: fetch_wiki.py  pyproject.toml  split_pages.py  validate_gfm.py
plugins/ndf/skills/playwright-scenario-test/: .gitignore  SKILL.md  pyproject.toml
plugins/ndf/skills/playwright-scenario-test/docs/: 01-methodology.md  02-page-roles.md  03-test-techniques.md  04-playwright-mapping.md  05-bug-report.md  06-pytest-playwright.md  README.md
plugins/ndf/skills/playwright-scenario-test/docs/checklists/: checklist-auth.md  checklist-cart-checkout.md  checklist-common.md  checklist-dashboard.md  checklist-edit.md  checklist-form.md  checklist-item.md  checklist-list.md  checklist-lp.md  checklist-modal-wizard.md  checklist-search.md
plugins/ndf/skills/playwright-scenario-test/scenario_test/: __init__.py  __main__.py  a11y.py  body_check.py  cli.py  config.py  curl_executor.py  cwv.py  evidence.py  hud.py  locator_steps.py  nav_helpers.py  playwright_executor.py  pytest_plugin.py  pytest_report.py  report.py  runner.py  testcase.py  video.py
plugins/ndf/skills/playwright-scenario-test/scenario_test/fixtures/: __init__.py  a11y.py  auth.py  body_check.py  cwv.py  evidence.py
plugins/ndf/skills/playwright-scenario-test/scenario_test/uploaders/: __init__.py
plugins/ndf/skills/playwright-scenario-test/scripts/: _drive_auth.py  build_gdoc_with_drive_links.py  check_cwv.py  classify_page_role.py  gdrive_upload_dir.py  generate_test_plan.py  record_scenario.py  record_to_yaml.py  run_a11y_scan.py  trace_link.py  upload_evidence.py  upload_md_as_gdoc.py
plugins/ndf/skills/playwright-scenario-test/templates/: config.example.yaml  conftest.py.template  scenario.config.yaml  test_auth.py.template  test_dashboard.py.template  test_form.py.template  test_list.py.template  testcase-auth.yaml.template  testcase-curl.yaml.template  testcase-edit.yaml.template  testcase-form.yaml.template  testcase-list.yaml.template  testcase-playwright.yaml.template
plugins/ndf/skills/playwright-scenario-test/tests/: conftest.py  test_a11y_cwv_routing.py  test_all_pairs.py  test_auth_cache.py  test_body_check.py  test_config_basic_auth.py  test_curl_url_validation.py  test_evidence_fixture.py  test_filter_and_slug.py  test_locator_steps.py  test_makereport_user_properties.py  test_pytest_plugin_bootstrap.py  test_pytest_report.py  test_pytest_terminal_summary.py  test_pytester_integration.py  test_record_to_yaml.py  test_same_origin.py  test_step_schema.py  test_templates.py  test_upload_evidence.py  test_yaml_repr.py
scripts/: install-kiro.sh
(+241 files in other folders)
