[project]
name = "playwright-scenario-test"
version = "0.4.0"
description = "pytest-playwright 上で動く Web シナリオ E2E テストの理論ベース実施フレームワーク (Claude Code skill)。v0.3.0: 自前 YAML DSL を全廃し、pytest plugin / fixture / marker / a11y autouse / CWV autouse / HUD overlay / report.md / Google Drive 連携を提供。v0.4.0: PHP / SSR がフロント漏れさせる Fatal error / STRICT: 等を検出する body_check autouse を default 有効で復活 (PHP 系パターン内蔵)。"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.50,<2.0",
    "pyyaml>=6.0",
    # webm → mp4 変換用。Playwright 録画は webm のみ生成するが、
    # Google Drive のプレビュアでは mp4 (H.264) の方が安定するため変換する。
    "imageio-ffmpeg>=0.4",
    # v0.3.0: pure pytest-playwright 移行
    # pytest 本体と pytest-playwright fixture (page / context / browser_context_args)、
    # pytest-xdist による並列実行を main 依存として要求する。
    "pytest>=8.0",
    "pytest-playwright>=0.5",
    "pytest-xdist>=3.0",
]

[project.optional-dependencies]
# Drive 連携: scripts/trace_link.py / build_gdoc_with_drive_links.py 等が使用
drive = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]
# axe-core ベース a11y スキャン: scripts/run_a11y_scan.py が使用
a11y = [
    "axe-playwright-python>=0.1.4",
]
# 開発用: pure function の単体テスト (uv run --extra dev pytest)
# pytest 本体は main deps に移行済 (v0.3.0)。dev には開発時のみの拡張を入れる余地。
dev = [
    "pytest>=8.0",
]

[project.entry-points."pytest11"]
# pytest が auto-discover する plugin entry-point。
# ``uv pip install -e .`` 後は ``pytest`` 起動だけで NDF plugin が有効になる。
ndf-scenario-test = "scenario_test.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scenario_test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
